chore: fix game hero z-index issue

--- a/src/renderer/src/components/GameHero/GameHero.module.css
+++ b/src/renderer/src/components/GameHero/GameHero.module.css
@@ -8,10 +8,6 @@
   background-color: var(--mantine-primary-color-light);
 }
 
-.overlay {
-  z-index: 1;
-}
-
 .content {
   position: relative;
   z-index: 2;
